create a table for painting and style of chat

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,4 +3,7 @@ td {border: 1px solid black; width: 30px; height: 30px;}
 .red {
     background-color: red;
   }
-  
+
+  li:nth-child(odd) {
+    background-color: lightsteelblue;
+}
