--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,32 @@
+/* Grid and chat page */
+.grid-and-chat-container{
+  display: flex;
+  justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* chat */
+
+.chat-container{
+  height: 540px;
+  width: 500px;
+  background-color: rgb(145, 24, 24);
+  margin-top: 80px;
+  border-radius: 10px;
+ 
+}
+
+.chat-box{
+  margin: 0 auto;
+  margin-top: 20px;
+  height: 400px;
+  width: 400px;
+  background-color: white;
+  border: black solid 2px;
+}
+
+/* grid */
 td {border: 1px solid black; width: 30px; height: 30px;}
 
 .red {
