--- a/frontend/style.css
+++ b/frontend/style.css
@@ -14,6 +14,7 @@
   background-color: rgb(145, 24, 24);
   margin-top: 80px;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  
 }
 
@@ -24,6 +25,30 @@
   width: 400px;
   background-color: white;
   border: black solid 2px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.chat-input{
+  height: 50px;
+  width: 300px;
+  margin-top: 30px;
+  margin-left: 50px;
+  border: black solid 2px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.send-chat-btn{
+  height: 50px;
+  width: 80px;
+  background-color: black;
+  color: white;
+  border: none;
+  margin-left: 5px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  
 }
 
 /* grid */
