--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,9 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
+
+body {
+  background-color: rgb(61, 61, 61);
+}
+
+/* Landing page */
+.landing-page-container {
+  height: 70vh;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-family: 'DynaPuff', cursive;
+  text-align: center;
+  background-color: rgb(49, 49, 49);
+  box-shadow: 10px 10px rgb(83, 83, 83);
+  color: #f1f1f1;
+  margin-left: 30%;
+  margin-top: 10%;
+  padding: 0;
+}
+
+#inputNickName {
+  width: 200px;
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  background-color: rgb(49, 49, 49);
+  border-bottom: 1px solid #f1f1f1;
+  color: #f1f1f1;
+  font-size: 1.5rem;
+  font-family: 'DynaPuff', cursive;
+}
+
+#inputNickName:focus {
+  outline: none;
+  font-size: 1.5rem;
+}
+
+#submitBtn {
+  font-size: 1.5rem;
+  width: 100px;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  box-shadow: 7px 7px grey;
+}
+
+#submitBtn:active {
+  background-color: #f1f1f1;
+  box-shadow: 0 5px #cacaca;
+  transform: translateY(4px);
+  transform: translateX(4px);
+}
+
 /* Grid and chat page */
 .grid-and-chat-container{
-  display: flex;
+  display: none;
   justify-content: space-around;
   max-width: 1200px;
   margin: 0 auto;
+  background-color: rgb(255, 255, 255);
 }
 
 /* chat */
