style on landing-page div

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,8 +6,8 @@ body {
 
 /* Landing page */
 .landing-page-container {
-  height: 70vh;
-  width: 50%;
+  height: 50vh;
+  width: 40vw;
   display: flex;
   justify-content: center;
   align-items: center;
