add a scroll function to the chat box

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -84,6 +84,7 @@ body {
   border: black solid 2px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow-y: scroll;
 }
 
 .chat-msg li{
