--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
   background-color: rgb(61, 61, 61);
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Landing page */
@@ -64,7 +66,6 @@ body {
 }
 
 /* chat */
-
 .chat-container{
   height: 540px;
   width: 500px;
@@ -89,7 +90,7 @@ body {
 
 .chat-msg li{
   list-style: none;
-  height: 30px;
+  height: fit-content;
   width: fit-content;
   max-width: 300px;
   padding: 8px;
@@ -99,6 +100,7 @@ body {
   border-radius: 5px;
   margin-top: 10px;
   margin-left: 10px;
+  font-size: 0.9rem;
 }
 
 .chat-input{
