--- a/frontend/style.css
+++ b/frontend/style.css
@@ -69,7 +69,7 @@ body {
 .chat-container{
   height: 540px;
   width: 500px;
-  background-color: rgb(145, 24, 24);
+  background-color: rgba(134, 151, 173, 0.699);
   margin-top: 80px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -82,7 +82,7 @@ body {
   height: 400px;
   width: 400px;
   background-color: white;
-  border: black solid 2px;
+  border: black solid 0px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow-y: scroll;
@@ -91,31 +91,29 @@ body {
 .chat-msg li{
   list-style: none;
   height: fit-content;
-  max-width: 350px;
+  max-width: 360px;
   padding: 8px;
   line-height: 30px;
   margin: 0 auto;
-  border: black solid 1px;
-  border-radius: 5px;
   margin-top: 10px;
   margin-left: 10px;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .chat-input{
-  height: 50px;
-  width: 300px;
+  height: 40px;
+  width: 310px;
   margin-top: 30px;
   margin-left: 50px;
-  border: black solid 2px;
+  border: black solid 0px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .send-chat-btn{
-  height: 50px;
+  height: 40px;
   width: 80px;
-  background-color: black;
+  background-color: rgb(77, 84, 95);
   color: white;
   border: none;
   margin-left: 5px;
@@ -125,12 +123,13 @@ body {
 }
 
 /* grid */
-td {border: 1px solid black; width: 30px; height: 30px;}
-
-.red {
-    background-color: red;
-  }
+td {
+  border: 1px solid black; 
+  width: 30px; 
+  height: 30px;
+}
 
   li:nth-child(odd) {
     background-color: lightsteelblue;
+    border-radius: 10px;
 }
