--- a/frontend/style.css
+++ b/frontend/style.css
@@ -76,6 +76,18 @@ body {
  
 }
 
+.save-btn{
+  height: 40px;
+  width: 80px;
+  background-color: rgb(104, 148, 133);
+  color: white;
+  border: none;
+  margin-left: 5px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 30px;
+}
+
 .chat-box{
   margin: 0 auto;
   margin-top: 20px;
