--- a/frontend/style.css
+++ b/frontend/style.css
@@ -88,6 +88,18 @@ body {
   margin-top: 30px;
 }
 
+.show-saved-img-btn{
+  height: 40px;
+  width: 150px;
+  background-color: rgb(66, 110, 157);
+  color: white;
+  border: none;
+  margin-left: 5px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 30px;
+}
+
 .chat-box{
   margin: 0 auto;
   margin-top: 20px;
